Fix overflow-x

--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,5 @@
     max-width: 100%;
     background-image: linear-gradient(45deg, #9772fb 50%, #6e3afd);
     position: relative;
+    overflow: visible;
 }
